@@ -5,14 +5,13 @@ import com.cms.dto.DtoMapper;
 import com.cms.dto.request.TagCreateRequest;
 import com.cms.dto.response.ObjectCreated;
 import com.cms.dto.response.ObjectUpdated;
-import com.cms.dto.response.TagDto;
+import com.cms.dto.response.TagResponse;
+import com.cms.dto.response.TagResponseSnippet;
 import com.cms.entity.Tag;
 import com.cms.exception.ObjectNotFoundException;
 import com.cms.repository.TagRepository;
 import com.cms.service.HasSlug;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.data.domain.Example;
-import org.springframework.transaction.annotation.Transactional;
+import com.cms.service.TagService;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
@@ -23,55 +22,45 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.text.MessageFormat;
-import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/tags")
-public class TagController implements HasSlug {
+public class TagController implements HasSlug<TagResponse> {
 
-    @Autowired
-    private TagRepository tagRepository;
+    private final TagRepository tagRepository;
+    private final TagService tagService;
+
+    public TagController(TagRepository tagRepository, TagService tagService) {
+        this.tagRepository = tagRepository;
+        this.tagService = tagService;
+    }
 
     @GetMapping
-    public List<TagDto> getAll() {
-        return tagRepository.findAll().stream().map(DtoMapper.TAG_TO_DTO).collect(Collectors.toList());
+    public List<TagResponseSnippet> getAll() {
+        return tagRepository.findAll().stream().map(DtoMapper.TAG_TO_SNIPPET).toList();
     }
 
     @Override
     @GetMapping("/slug/{slug}")
-    public Object getBySlug(@PathVariable String slug) {
-        Tag tag = new Tag();
-        tag.setSlug(slug);
-        Optional<Tag> optional = tagRepository.findOne(Example.of(tag));
+    public TagResponse getBySlug(@PathVariable String slug) {
+        Optional<Tag> optional = tagService.findBySlug(slug);
         return optional.map(DtoMapper.TAG_TO_DTO)
                 .orElseThrow(() -> new ObjectNotFoundException(MessageFormat.format(ErrorMessage.TAG_NOT_FOUND_WITH_SLUG, slug)));
     }
 
     @PostMapping
     public ObjectCreated addTag(@RequestBody TagCreateRequest request) {
-        Tag tag = new Tag();
-        mapRequestToTag(request, tag);
-        tag.setCreated(LocalDateTime.now());
-        tag = tagRepository.saveAndFlush(tag);
+        Tag tag = tagService.createTag(request);
         return new ObjectCreated(tag.getId(), ErrorMessage.TAG_CREATED);
     }
 
-    @Transactional
     @PutMapping("/{id}")
     public ObjectUpdated updateTag(@PathVariable Integer id,
                                    @RequestBody TagCreateRequest request) {
-        Optional<Tag> optionalTag = tagRepository.findById(id);
-        if (optionalTag.isPresent()) {
-            Tag existingTag = optionalTag.get();
-            mapRequestToTag(request, existingTag);
-            existingTag.setUpdated(LocalDateTime.now());
-            return new ObjectUpdated(ErrorMessage.TAG_UPDATED);
-        } else {
-            throw new ObjectNotFoundException(String.format(ErrorMessage.TAG_NOT_FOUND_WITH_ID, id));
-        }
+        tagService.updateTag(request, id);
+        return new ObjectUpdated(ErrorMessage.TAG_UPDATED);
     }
 
     @DeleteMapping("/{id}")
@@ -79,10 +68,4 @@ public class TagController implements HasSlug {
         tagRepository.deleteById(id);
     }
 
-    private void mapRequestToTag(TagCreateRequest request, Tag tag) {
-        tag.setName(request.getName());
-        tag.setSlug(request.getSlug());
-        tag.setTitle(request.getTitle());
-        tag.setDescription(request.getDescription());
-    }
 }
