@@ -7,13 +7,12 @@ import com.cms.dto.TypeDto;
 import com.cms.dto.request.ToolCreateRequest;
 import com.cms.dto.response.ObjectCreated;
 import com.cms.dto.response.ObjectUpdated;
-import com.cms.dto.response.ToolResponseDto;
+import com.cms.dto.response.ToolResponse;
+import com.cms.dto.response.ToolResponseSnippet;
 import com.cms.entity.Tool;
 import com.cms.exception.ObjectNotFoundException;
 import com.cms.service.HasSlug;
 import com.cms.service.ToolService;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
@@ -21,35 +20,31 @@ import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.text.MessageFormat;
 import java.util.Arrays;
 import java.util.List;
-import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @RestController
-@RequestMapping("tools")
-public class ToolController implements HasSlug {
+@RequestMapping("/tools")
+public class ToolController implements HasSlug<ToolResponse> {
 
-    @Autowired
-    private ToolService toolService;
+    private final ToolService toolService;
+
+    public ToolController(ToolService toolService) {
+        this.toolService = toolService;
+    }
 
     @GetMapping
-    public List<ToolResponseDto> getAllTools(@RequestParam(required = false) String slug) {
-        if (Objects.nonNull(slug)) {
-            List<Tool> tools = toolService.findToolBySlug(slug);
-            return tools.stream().map(DtoMapper.TOOL_TO_DTO).collect(Collectors.toList());
-        }
+    public List<ToolResponseSnippet> getAllTools() {
         List<Tool> tools = toolService.findAll();
-        return tools.stream().map(DtoMapper.TOOL_TO_DTO).collect(Collectors.toList());
+        return tools.stream().map(DtoMapper.TOOL_TO_SNIPPET).toList();
     }
 
     @GetMapping("/{id}")
-    public ToolResponseDto getToolById(@PathVariable Integer id) {
+    public ToolResponse getToolById(@PathVariable Integer id) {
         Optional<Tool> optional = toolService.getToolById(id);
         return optional.map(DtoMapper.TOOL_TO_DTO)
                 .orElseThrow(() -> new ObjectNotFoundException(MessageFormat.format(ErrorMessage.TOOL_NOT_FOUND_WITH_ID, id)));
@@ -61,7 +56,6 @@ public class ToolController implements HasSlug {
         return new ObjectCreated(tool.getId(), ErrorMessage.TOOl_CREATED);
     }
 
-    @Transactional
     @PutMapping("/{id}")
     public ObjectUpdated updateTool(@PathVariable Integer id,
                                     @RequestBody ToolCreateRequest request) {
@@ -69,11 +63,11 @@ public class ToolController implements HasSlug {
         return new ObjectUpdated(ErrorMessage.TOOL_UPDATED);
     }
 
-    @GetMapping("types")
+    @GetMapping("/types")
     public List<TypeDto> getToolTypes() {
         return Arrays.stream(ToolType.values())
                 .map(toolType -> new TypeDto(toolType.name(), toolType.getLabel()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @DeleteMapping("/{id}")
@@ -81,17 +75,12 @@ public class ToolController implements HasSlug {
         toolService.deleteById(id);
     }
 
-    @GetMapping("headerTools")
-    public List<ToolResponseDto> getHeaderTools() {
-        List<Tool> headerTools = toolService.getHeaderTools();
-        return headerTools.stream().map(DtoMapper.TOOL_TO_DTO).collect(Collectors.toList());
-    }
-
     @Override
     @GetMapping("/slug/{slug}")
-    public Object getBySlug(@PathVariable String slug) {
+    public ToolResponse getBySlug(@PathVariable String slug) {
         Optional<Tool> optional = toolService.findBySlug(slug);
         return optional.map(DtoMapper.TOOL_TO_DTO)
                 .orElseThrow(() -> new ObjectNotFoundException(MessageFormat.format(ErrorMessage.TOOL_NOT_FOUND_WITH_SLUG, slug)));
     }
+
 }
